--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </div>
                 </a>
 
-                <a href="./project/icov.html">
+                <a href="./pages/project/icov.html">
                     <div class="info">
                         <h3>Redesign iCOV</h3>
                         <div class="tags">
